--- a/src/app/Components/box/box.component.html
+++ b/src/app/Components/box/box.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-6">
                 <div class="box d-flex flex-row align-items-center justify-content-start">
                     <div class="mt-auto">
-                        <div class="box_image"><img src="images/boxes_1.png" alt=""></div>
+                        <div class="box_image"><img src="assets/images/boxes_1.png" alt=""></div>
                     </div>
                     <div class="box_content">
                         <div class="box_title">Size Guide</div>
@@ -15,7 +15,7 @@
             <div class="col-lg-6 box_col">
                 <div class="box d-flex flex-row align-items-center justify-content-start">
                     <div class="mt-auto">
-                        <div class="box_image"><img src="images/boxes_2.png" alt=""></div>
+                        <div class="box_image"><img src="assets/images/boxes_2.png" alt=""></div>
                     </div>
                     <div class="box_content">
                         <div class="box_title">Shipping</div>
