--- a/src/app/Components/product-detail/product-detail.component.html
+++ b/src/app/Components/product-detail/product-detail.component.html
@@ -7,66 +7,8 @@
             <!-- Product Image -->
             <div class="col-lg-6">
                 <div class="product_image_slider_container">
-                    <div id="slider" class="flexslider">
-                        <ul class="slides">
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                            <li>
-                                <img src="images/product_image_1.jpg" />
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="carousel_container">
-                        <div id="carousel" class="flexslider">
-                            <ul class="slides">
-                                <li>
-                                    <div><img src="images/product_1.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_2.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_3.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_4.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_5.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_6.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_7.jpg" /></div>
-                                </li>
-                                <li>
-                                    <div><img src="images/product_8.jpg" /></div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="fs_prev fs_nav disabled"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-                        <div class="fs_next fs_nav"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
-                    </div>
+
+                    <app-carousel></app-carousel>
                 </div>
             </div>
 
@@ -126,7 +68,7 @@
                             <div
                                 class="product_button product_fav text-center d-flex flex-column align-items-center justify-content-center">
                                 <div>
-                                    <div><img src="images/heart_2.svg" class="svg" alt="">
+                                    <div><img src="assets/images/heart_2.svg" class="svg" alt="">
                                         <div>+</div>
                                     </div>
                                 </div>
@@ -134,7 +76,7 @@
                             <div
                                 class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
                                 <div>
-                                    <div><img src="images/cart.svg" class="svg" alt="">
+                                    <div><img src="assets/images/cart.svg" class="svg" alt="">
                                         <div>+</div>
                                     </div>
                                 </div>
