Agrego nuevo proyecto, errores de dependencias en el anterior

--- a/src/app/Components/product-detail/product-detail.component.html
+++ b/src/app/Components/product-detail/product-detail.component.html
@@ -15,14 +15,14 @@
             <!-- Product Info -->
             <div class="col-lg-6 product_col">
                 <div class="product_info">
-                    <div class="product_name">Cool Clothing with Brown Stripes</div>
-                    <div class="product_category">In <a href="category.html">Category</a></div>
+                    <div class="product_name">{{product.name}}</div>
+                    <div class="product_category">In <a href="category.html">{{product.category}}</a></div>
                     <div class="product_rating_container d-flex flex-row align-items-center justify-content-start">
                         <div class="rating_r rating_r_4 product_rating"><i></i><i></i><i></i><i></i><i></i></div>
                         <div class="product_reviews">4.7 out of (3514)</div>
                         <div class="product_reviews_link"><a href="#">Reviews</a></div>
                     </div>
-                    <div class="product_price">$3<span>.99</span></div>
+                    <div class="product_price">${{product.price}}</div>
                     <div class="product_size">
                         <div class="product_size_title">Select Size</div>
                         <ul class="d-flex flex-row align-items-start justify-content-start">
