--- a/src/app/Components/top-bar/top-bar.component.html
+++ b/src/app/Components/top-bar/top-bar.component.html
@@ -14,11 +14,11 @@
         <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
         <nav class="main_nav">
             <ul class="d-flex flex-row align-items-start justify-content-start">
-                <li class="active"><a [routerLink]="['Home']">Women</a></li>
-                <li><a [routerLink]="['Men']">Men</a></li>
-                <li><a [routerLink]="['Kids']">Kids</a></li>
-                <li><a [routerLink]="['HomeDeco']">Home Deco</a></li>
-                <li><a [routerLink]="['Contact']">Contact</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['home/Women']">Women</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['home/Men']">Men</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['home/Kids']">Kids</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['home/HomeDeco']">Home Deco</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['Contact']">Contact</a></li>
             </ul>
         </nav>
         <div class="header_right d-flex flex-row align-items-center justify-content-start ml-auto">
